# test_django_CBV_

./: db.sqlite3  pyproject.toml  readme.txt
companies/: admin.py  views.py
companies/migrations/: 0001_initial.py
test_django_1/: asgi.py  settings.py  urls.py  wsgi.py
vacancies/: models.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py
