[tool.poetry]
name = "test-django-1"
version = "0.1.0"
description = ""
authors = ["VitaliyKladko <vitaliykladko13@gmail.com>"]
readme = "README.md"
packages = [{include = "test_django_1"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
